--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,13 @@
 :root {
   /* Colors */
-  --color-dark-a:   #25272a;
-  --color-dark-b:   #1b1c1f;
-  --color-dark-c:   #25282d;
-  --color-dark-d:   #676b75;
+  --color-dark-a:   #1C1C1C;
+  --color-dark-b:   #212121;
+  --color-dark-c:   #2B2B2B;
+  --color-dark-d:   #757575;
   --color-white-a:  #FFFFFF;
   --color-blue-a:   #6f45fb;
   --color-cyan-a:   #00FBB4;
+  --color-sand-a:   #D7D1CA;
 
   /* Easings */
   --easeing-InExpo:     cubic-bezier(0.950, 0.050, 0.795, 0.035);
@@ -16,27 +17,9 @@
   /* Timing */
   --anim-time:   0.62s;
 
-  /* Breakpoints */
-  --breakpoint-320: 320px;
-  --breakpoint-340: 340px;
-  --breakpoint-768: 768px;
-  --breakpoint-1024: 1024px;
-  --breakpoint-1280: 1280px;
-  --breakpoint-1440: 1440px;
-  --breakpoint-1600: 1600px;
+  /* Line heights */
+  --line-height: 1.65;
 
-  /* Breakpoint helpers */
-  --below-breakpoint-320: "only screen and (max-width : #{var(--breakpoint-320)})";
-  --below-breakpoint-340: "only screen and (max-width : #{var(--breakpoint-340)})";
-  --above-breakpoint-340: "only screen and (min-width : #{var(--breakpoint-340)})";
-  --below-breakpoint-768: "only screen and (max-width : #{var(--breakpoint-768)})";
-  --above-breakpoint-768: "only screen and (min-width : #{var(--breakpoint-768)})";
-  --below-breakpoint-1024: "only screen and (max-width : #{var(--breakpoint-1024)})";
-  --above-breakpoint-1024: "only screen and (min-width : #{var(--breakpoint-1024)})";
-  --below-breakpoint-1280: "only screen and (max-width : #{var(--breakpoint-1280)})";
-  --above-breakpoint-1280: "only screen and (min-width : #{var(--breakpoint-1280) + 1})";
-  --below-breakpoint-1440: "only screen and (max-width : #{var(--breakpoint-1440)})";
-  --above-breakpoint-1440: "only screen and (min-width : #{var(--breakpoint-1440)})";
-  --below-breakpoint-1600: "only screen and (max-width : #{var(--breakpoint-1600)})";
-  --above-breakpoint-1600: "only screen and (min-width : #{var(--breakpoint-1600)})";
+  /* Standard */
+  --baseline: 1.7778rem;
 }
